client logo added

--- a/index.html
+++ b/index.html
@@ -1534,6 +1534,13 @@
                 <div class="scroller-item"><img src="img/partners/tej.png" alt="Image 13"></div>
                 <div class="scroller-item"><img src="img/partners/vertic.png" alt="Image 14"></div>
                 <div class="scroller-item"><img src="img/partners/xenex.png" alt="Image 15"></div>
+                <div class="scroller-item"><img src="img/partners/yg.png" alt="Image 15"></div>
+                <div class="scroller-item"><img src="img/partners/nys.png" alt="Image 15"></div>
+                <div class="scroller-item"><img src="img/partners/gl.png" alt="Image 15"></div>
+                <div class="scroller-item"><img src="img/partners/rn-builders.png" alt="Image 15"></div>
+                <div class="scroller-item"><img src="img/partners/queens_paradise.png" alt="Image 15"></div>
+                <div class="scroller-item"><img src="img/partners/lexip.png" alt="Image 15"></div>
+                <div class="scroller-item"><img src="img/partners/sadhana.png" alt="Image 15"></div>
                 
                 <!-- Duplicate of the 16 images for seamless looping -->
                 <div class="scroller-item"><img src="img/partners/alagugym.png" alt="Image 1"></div>
@@ -1551,6 +1558,13 @@
                 <div class="scroller-item"><img src="img/partners/tej.png" alt="Image 13"></div>
                 <div class="scroller-item"><img src="img/partners/vertic.png" alt="Image 14"></div>
                 <div class="scroller-item"><img src="img/partners/xenex.png" alt="Image 15"></div>
+                <div class="scroller-item"><img src="img/partners/yg.png" alt="Image 15"></div>
+                <div class="scroller-item"><img src="img/partners/nys.png" alt="Image 15"></div>
+                <div class="scroller-item"><img src="img/partners/gl.png" alt="Image 15"></div>
+                <div class="scroller-item"><img src="img/partners/rn-builders.png" alt="Image 15"></div>
+                <div class="scroller-item"><img src="img/partners/queens_paradise.png" alt="Image 15"></div>
+                <div class="scroller-item"><img src="img/partners/lexip.png" alt="Image 15"></div>
+                <div class="scroller-item"><img src="img/partners/sadhana.png" alt="Image 15"></div>
             </div>
         </section>
         <!-- partners end -->
